[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
    "F401",
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.poetry]
name = "f3-region-home"
version = "0.1.0"
description = ""
authors = ["Evan Petzoldt <evan.petzoldt@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.6.1"
reflex-calendar = "^0.0.4"
reflex-map = "^0.2.3"
psycopg2-binary = "^2.9.10"
watchdog = "^5.0.3"
watchfiles = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
